# py-gsheets-db

./: LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-package.yml
examples/: basic_usage.py
py_ghseets_db/: __init__.py  core.py
tests/: __init__.py  conftest.py  test_gsheets_db.py
