[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-gsheets-db"
version = "0.1.0"
description = "A Python library for using Google Sheets as a database"
readme = "README.md"
authors = [{name = "Abdullah Wasim", email = "abdullahwasimm2112@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.4.1",
]

[project.urls]
Homepage = "https://github.com/abdullah-w-21/py-gsheets-db"
Repository = "https://github.com/abdullah-w-21/py-gsheets-db.git"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
addopts = "-ra -q"
testpaths = [
    "tests",
]
